--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
         <li><a href="#">About</a></li>
       </ul>
     </nav>
+    <p>There are <strong>6</strong> photos</p>
+    <img src="https://unsplash.it/200/200?random=1">
+    <img src="https://unsplash.it/200/200?random=2">
+    <img src="https://unsplash.it/200/200?random=3">
+    <img src="https://unsplash.it/200/200?random=4">
+    <img src="https://unsplash.it/200/200?random=5">
+    <img src="https://unsplash.it/200/200?random=6">
   </body>
 </html>
