--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
   <body>
     <h1>Bitmaker Photo Gallery</h1>
     <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Add A Photo</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
+        <div class="menu">
+          <a href="#">Home</a>
+          <a href="#">Add A Photo</a>
+          <a href="#">About</a>
+        </div>
     </nav>
     <p>There are <strong>6</strong> photos</p>
-    <img src="https://unsplash.it/200/200?random=1">
-    <img src="https://unsplash.it/200/200?random=2">
-    <img src="https://unsplash.it/200/200?random=3">
-    <img src="https://unsplash.it/200/200?random=4">
-    <img src="https://unsplash.it/200/200?random=5">
-    <img src="https://unsplash.it/200/200?random=6">
+    <img src="https://unsplash.it/400/500?random=1">
+    <img src="https://unsplash.it/400/500?random=2">
+    <img src="https://unsplash.it/400/500?random=3">
+    <img src="https://unsplash.it/400/500?random=4">
+    <img src="https://unsplash.it/400/500?random=5">
+    <img src="https://unsplash.it/400/500?random=6">
+    <footer>&copy; Bitmaker 2018</footer>
   </body>
 </html>
