--- a/index.html
+++ b/index.html
@@ -6,21 +6,63 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Bitmaker Photo Gallery</h1>
-    <nav>
-        <div class="menu">
-          <a href="#">Home</a>
-          <a href="#">Add A Photo</a>
-          <a href="#">About</a>
+    <header>
+      <h1>Bitmaker Photo Gallery</h1>
+      <nav>
+        <div class="navbut">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Add A Photo</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
         </div>
-    </nav>
+      </nav>
+    </header>
+
     <p>There are <strong>6</strong> photos</p>
-    <img src="https://unsplash.it/400/500?random=1">
-    <img src="https://unsplash.it/400/500?random=2">
-    <img src="https://unsplash.it/400/500?random=3">
-    <img src="https://unsplash.it/400/500?random=4">
-    <img src="https://unsplash.it/400/500?random=5">
-    <img src="https://unsplash.it/400/500?random=6">
-    <footer>&copy; Bitmaker 2018</footer>
+
+    <section class="photos">
+      <div class="frame">
+        <img src="https://unsplash.it/400/500?random=1">
+        <div class="links">
+        <a href="#">Edit</a> | <a href="#">Delete</a>
+        </div>
+      </div>
+      <div class="frame">
+        <img src="https://unsplash.it/400/500?random=2">
+        <div class="links">
+        <a href="#">Edit</a> | <a href="#">Delete</a>
+        </div>
+      </div>
+      <div class="frame">
+        <img src="https://unsplash.it/400/500?random=3">
+        <div class="links">
+        <a href="#">Edit</a> | <a href="#">Delete</a>
+        </div>
+      </div>
+      <div class="frame">
+        <img src="https://unsplash.it/400/500?random=4">
+        <div class="links">
+        <a href="#">Edit</a> | <a href="#">Delete</a>
+        </div>
+      </div>
+      <div class="frame">
+        <img src="https://unsplash.it/400/500?random=5">
+        <div class="links">
+        <a href="#">Edit</a> | <a href="#">Delete</a>
+        </div>
+      </div>
+      <div class="frame">
+        <img src="https://unsplash.it/400/500?random=6">
+        <div class="links">
+        <a href="#">Edit</a> | <a href="#">Delete</a>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      &copy; Bitmaker 2018
+    </footer>
+
   </body>
 </html>
